update cron job time to UTC & add trigger on push

--- a/.github/workflows/run-ntust-bulletin-2.yml
+++ b/.github/workflows/run-ntust-bulletin-2.yml
@@ -1,8 +1,11 @@
-name: Run NTUST Bulletin 2 every 19:30 pm
+name: Run NTUST Bulletin 2
 
 on:
   schedule:
-    - cron:  '30 19 * * *'
+    - cron:  '30 12 * * *'
+  push:
+    branches:
+      - master
 
 permissions:
   contents: read
